Industry Compatible keymap: MMB-dragging to transform engages axis-constraining on release #83177

Closed
opened 2020-11-29 11:13:29 +01:00 by William Reynish · 9 comments

System Information
Operating system: Darwin-19.6.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 5500M OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.10.18

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-11-29 08:04, hash: 13c820d87b
Worked: (2.91)

Short description of error
When using the IC keymap, users will drag with MMB to activate tools anywhere on the screen. This is now broken in master, because as you release MMB, it will start axis-constraining instead of confirming.

Exact steps for others to reproduce the error

  • Switch to the Industry Compatible keymap
  • Switch to the Move tool in the 3D View

With the default cube selected, use MMB-drag to transform, then release

The object will now constrain to an axis, rather than simply confirming the transformation.

**System Information** Operating system: Darwin-19.6.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 5500M OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.10.18 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-11-29 08:04, hash: `13c820d87b` Worked: (2.91) **Short description of error** When using the IC keymap, users will drag with MMB to activate tools anywhere on the screen. This is now broken in master, because as you release MMB, it will start axis-constraining instead of confirming. **Exact steps for others to reproduce the error** - Switch to the Industry Compatible keymap - Switch to the Move tool in the 3D View # With the default cube selected, use MMB-drag to transform, then release The object will now constrain to an axis, rather than simply confirming the transformation.

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

#83217 was marked as duplicate of this issue

#83217 was marked as duplicate of this issue

Assume it's related to 44f5d99cbf

Assume it's related to 44f5d99cbf872d8b9eead749ca880cbeb9fc0266

Added subscribers: @qbicksan, @rjg

Added subscribers: @qbicksan, @rjg

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by c0677b662f

This issue was referenced by c0677b662f4b13429c0738b99ace85403385ff38

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-11-30 18:51:06 +01:00

This issue was referenced by 2de49d1ff7

This issue was referenced by 2de49d1ff7e2ea5e632aaaabb3664d6cf6210153

This issue was referenced by 6fda30cc54

This issue was referenced by 6fda30cc54d24730d81b96b2e3b542bf94f52137
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83177
No description provided.