Fix T83177: Industry Compatible keymap: MMB-dragging to transform engages axis-constraining on release

Release confirm did not consider modal keymap events.